# spray-path-planner

./: README.md
RRAD/src/rrad_wash_cell/: CMakeLists.txt  ReadMe  package.xml
RRAD/src/rrad_wash_cell/msg/: Floats.msg  Impinge.msg  ImpingementArray.msg  LineSegment.msg  LineSegmentArray.msg
RRAD/src/rrad_wash_cell/src/: Full_Analysis.py  ImpingementROS.py  MassPlanner.py  NewPlanner.py  NewReworkPlanner.py  NewVizPlanner.py  PartDataCollector.py  ReadMe  TestNewPlanner.py  file_input_service_final.py  path_storage_server_final.py
RRAD/src/rrad_wash_cell/src/Test_Data/: ATimeTest13.0Analysis.csv  ATimeTest13.0AnalysisStats.csv  ATimeTestMeanBoth13.0Analysis.csv  ATimeTestMeanBoth13.0AnalysisStats.csv  ATimeTestMeanDistance13.0Analysis.csv  ATimeTestMeanDistance13.0AnalysisStats.csv  Asolid_wheel_upright13.0Analysis.csv  Asolid_wheel_upright13.0AnalysisStats.csv  Asolid_wheel_uprightMeanBoth13.0Analysis.csv  Asolid_wheel_uprightMeanBoth13.0AnalysisStats.csv  Asolid_wheel_uprightMeanDistance13.0Analysis.csv  Asolid_wheel_uprightMeanDistance13.0AnalysisStats.csv  Blade_reducedMeanBoth13.0Analysis.csv  Blade_reducedMeanBoth13.0AnalysisStats.csv  DifferenceComparison.csv  FullComparison.csv  Incidence_TestMeanTime13.0Analysis.csv  Incidence_TestMeanTime13.0AnalysisStats.csv  PartComparison.csv  SummedComparison.csv  Wing_Section_NACA23015C200_reduced15.0Analysis.csv  Wing_Section_NACA23015C200_reduced15.0AnalysisStats.csv  (+53 more)
RRAD/src/rrad_wash_cell/srv/: Impingement.srv  Input_Mesh.srv  Modification.srv  Path_Modifier.srv  Path_Planner.srv  Subpath_Builder.srv
(+469 files in other folders)
